# claude-jacked

./: .gitignore  CLAUDE.md  JACKED_GUARDRAILS.md  README.md  install.sh  lessons.md  pyproject.toml  uninstall.sh
.claude/: settings.local.json
design/: chat_sessions.md  chat_sessions_poc.md  guardrails_and_lint_gate.md  security-audit-command.md  session_indexing_improvements.md  web_dashboard_and_accounts.md
docs/: design-claude-settings.md
jacked/: __init__.py  __main__.py  cli.py  client.py  guardrails.py  index_write_tracker.py  indexer.py  launch.py  retriever.py  searcher.py  version_check.py
jacked/api/: __init__.py  credential_helpers.py  credential_sync.py  main.py  watchers.py  websocket.py
jacked/api/routes/: __init__.py  analytics.py  auth.py  credentials.py  features.py  system.py
jacked/chat/: __init__.py  protocol.py
jacked/data/agents/: double-check-reviewer.md  pr-workflow-checker.md
jacked/data/commands/: audit-rules.md  dc.md  learn.md  pr.md  redo.md  (+1 more)
jacked/web/: __init__.py  auth.py  database.py  oauth.py  token_recovery.py
skills/jacked/: SKILL.md
tests/: conftest.py  test_config.py  test_index_write_tracker.py  test_indexer_incremental.py  test_transcript.py
tests/debugging/: test_gatekeeper.py
tests/unit/: test_active_credential.py  test_active_sessions.py  test_credential_sync.py  test_guardrails.py  test_launch.py  test_logs_pagination.py  test_security_gatekeeper.py  test_session_account_tracker.py  test_session_accounts.py  test_session_lookup.py  test_sound_hooks.py  test_version_check.py  test_websocket.py
(+36 files in other folders)
