[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-jacked"
version = "0.3.2"
description = "Smart reviewers, commands, and session search for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jack Neil", email = "jack@jackmd.com" }
]
keywords = ["claude", "ai", "context", "semantic-search", "qdrant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
search = [
    "qdrant-client>=1.7.0",
]
security = [
    "anthropic>=0.40.0",
]
all = [
    "qdrant-client>=1.7.0",
    "anthropic>=0.40.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "qdrant-client>=1.7.0",
    "anthropic>=0.40.0",
]

[project.scripts]
jacked = "jacked.cli:main"

[project.urls]
Homepage = "https://github.com/jackneil/claude-jacked"
Repository = "https://github.com/jackneil/claude-jacked"
Issues = "https://github.com/jackneil/claude-jacked/issues"

[tool.hatch.build.targets.wheel]
packages = ["jacked"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
